stoat/tests/snapshots/snapshots/snapshots__diff_review__last-commit.snap
---
source: stoat/tests/snapshots/diff_review.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=diff_review ctx=DiffReview
source=Last Commit file=file.txt (1/1) hunk=1/1 approved=0
  1:|1 this is line one
  2:2 this is line two
  3:3 this is line three
  4:4 this is line four
  5:5 this is line five
  6:6 this is line six
  7:7 this is line seven
  8:8 this is line eight
  9:9 this is line nine
 10:10 this is line ten
 11:11 this is line eleven
 12:12 this is line twelve
 13:13 this is line thirteen
 14:14 this is line fourteen
 15:15 this is line fifteen
 16:16 this is line sixteen
 17:17 this is line seventeen
 18:18 this is line eighteen
 19:19 this is line nineteen
 20:20 this is line twenty
 21:21 this is line twenty-one
 22:22 this is line twenty-two
 23:23 this is line twenty-three
 24:24 this is line twenty-four
 25:25 this is line twenty-five
 26:26 this is line twenty-six
 27:27 this is line twenty-seven
 28:28 this is line twenty-eight
 29:29 this is line twenty-nine
 30:30 this is line thirty
